syntax = "proto3";

package paymentspb;

service PaymentsService {
  rpc AuthorizePayment(AuthorizePaymentRequest) returns (AuthorizePaymentResponse) {};
  rpc ConfirmPayment(ConfirmPaymentRequest) returns (ConfirmPaymentResponse) {};
  rpc CreateInvoice(CreateInvoiceRequest) returns (CreateInvoiceResponse) {};
  rpc AdjustInvoice(AdjustInvoiceRequest) returns (AdjustInvoiceResponse) {};
  rpc PayInvoice(PayInvoiceRequest) returns (PayInvoiceResponse) {};
  rpc CancelInvoice(CancelInvoiceRequest) returns (CancelInvoiceResponse) {};
}

message AuthorizePaymentRequest {
  string customer_id = 1;
  double amount = 2;
}
message AuthorizePaymentResponse {
  string id = 1;
}

message ConfirmPaymentRequest {
  string id = 1;
}
message ConfirmPaymentResponse {}

message CreateInvoiceRequest {
  string order_id = 1;
  string payment_id = 2;
  double amount = 3;
}
message CreateInvoiceResponse {
  string id = 1;
}

message AdjustInvoiceRequest {
  string id = 1;
  double amount = 2;
}
message AdjustInvoiceResponse {}

message PayInvoiceRequest {
  string id = 1;
}
message PayInvoiceResponse {}

message CancelInvoiceRequest {
  string id = 1;
}
message CancelInvoiceResponse {}
